# sfml-game

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  run.bat  run.sh
src/: Game.h
